force-app/main/default/objects/FinServ__LifeEvent__c/FinServ__LifeEvent__c.object-meta.xml
<CustomObject>
    <description>A client&#39;s life event, such as a birth or marriage.</description>
    <label>Life Event</label>
    <nameField>
        <displayFormat>LE-{0000}</displayFormat>
        <label>Life Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Life Events</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>