force-app/main/default/objects/FinServ__LifeEvent__c/fields/FinServ__Client__c.field-meta.xml
<CustomField>
    <fullName>FinServ__Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Life Events</relationshipLabel>
    <relationshipName>Life_Events</relationshipName>
    <type>Lookup</type>
</CustomField>