force-app/main/default/objects/FinServ__LifeEvent__c/fields/FinServ__DiscussionNote__c.field-meta.xml
<CustomField>
    <fullName>FinServ__DiscussionNote__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Discussion Note</label>
    <type>TextArea</type>
</CustomField>