force-app/main/default/objects/FinServ__LifeEvent__c/fields/FinServ__EventType__c.field-meta.xml
<CustomField>
    <fullName>FinServ__EventType__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Baby</fullName>
            </value>
            <value>
                <fullName>New Job</fullName>
            </value>
            <value>
                <fullName>New Home</fullName>
            </value>
            <value>
                <fullName>College</fullName>
            </value>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>Retirement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>