force-app/main/default/objects/FinServ__LifeEvent__c/fields/FinServ__GoalType__c.field-meta.xml
<CustomField>
    <fullName>FinServ__GoalType__c</fullName>
    <label>Goal Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FinServ__EventType__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Saving for College</fullName>
            </value>
            <value>
                <fullName>Saving for Retirement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>